--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,10 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.manvir.SnapColors.FontsList" android:enabled="true" android:exported="true"/>
 		<activity
             android:name="com.manvir.SnapColors.DonateActivity"
             android:label="@string/title_activity_donate" >
@@ -39,7 +39,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <service android:name=".SnapColorsUpdater" android:enabled="true"></service>
+        <service android:name=".SnapColorsUpdater" android:enabled="true"/>
     </application>
 
 </manifest>
