--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:21.0.0'
     provided files('XposedBridgeApi-54.jar')
+    compile files('libs/PayPal_MPL.jar')
+    compile files('libs/commons-io-2.4.jar')
 }
