--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.manvir.SnapColors" >
 
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-		<meta-data
+        <meta-data
             android:name="xposedmodule"
             android:value="true" />
         <meta-data
@@ -22,32 +22,43 @@
         <meta-data
             android:name="xposeddescription"
             android:value="Add some colors to your snapchat captions. Change text size, color etc" />
+
         <activity
-            android:name="com.manvir.SnapColors.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.manvir.SnapColors.DonateActivity"
-            android:label="@string/title_activity_donate"
+            android:name=".DonateActivity"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/title_activity_donate" >
         </activity>
         <activity
-            android:name="com.manvir.SnapColors.Settings"
-            android:label="@string/app_name"
+            android:name=".EditGroups"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/title_activity_editgroups" >
         </activity>
-		<receiver android:name=".onBooted">
+
+        <receiver android:name=".onBooted" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <service android:name=".SnapColorsUpdater" android:enabled="true"/>
+
+        <service
+            android:name=".SnapColorsUpdater"
+            android:enabled="true" />
+
+        <activity
+            android:name=".AboutActivity"
+            android:label="@string/title_activity_about" >
+        </activity>
     </application>
 
 </manifest>
