--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     provided files('XposedBridgeApi-54.jar')
     compile files('libs/commons-io-2.4.jar')
     compile 'com.android.support:appcompat-v7:21.0.+'
+    compile files('libs/StartAppInApp-2.4.13.jar')
 }
 
 task upload(type: Exec) {
