--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,14 @@ android {
     }
     signingConfigs {
     }
-    compileSdkVersion 21
+    compileSdkVersion 22
     buildToolsVersion '21.1.2'
     defaultConfig {
         applicationId "com.manvir.SnapColors"
         minSdkVersion 15
-        targetSdkVersion 21
-        versionCode 16
-        versionName '3.1.6'
+        targetSdkVersion 22
+        versionCode 19
+        versionName '3.1.9'
     }
     buildTypes {
         release {
@@ -33,7 +33,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    provided files('XposedBridgeApi-54.jar')
     compile files('libs/commons-io-2.4.jar')
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.0.0'
@@ -41,4 +40,5 @@ dependencies {
     compile files('libs/objenesis-2.1.jar')
     compile files('libs/commons-lang3-3.3.2.jar')
     compile files('libs/kryo-3.0.0.jar')
+    provided files('XposedBridgeApi-20150213.jar')
 }
