--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/commons-io-2.4.jar')
-    compile 'com.android.support:appcompat-v7:22.1.1'
     compile files('libs/StartAppInApp-2.4.13.jar')
-    compile files('libs/commons-lang3-3.3.2.jar')
     provided files('XposedBridgeApi-20150213.jar')
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'commons-io:commons-io:2.4'
 }
