Tell lint to not abort on error.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
     productFlavors {
     }
     lintOptions {
+        abortOnError false
         checkReleaseBuilds false
     }
     packagingOptions {
