Don't allow sharing videos as it doesn't work 100% of the time

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data android:mimeType="image/*" />
-                <data android:mimeType="video/*" />
+                <!--<data android:mimeType="video/*" />-->
             </intent-filter>
         </activity>
         <activity
