--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,12 @@ android {
     signingConfigs {
     }
 
-    compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.1'
     defaultConfig {
         applicationId "com.manvir.SnapColors"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 41
         versionName '3.4.8'
     }
@@ -36,8 +36,9 @@ android {
     }
 
     packagingOptions {
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
     }
 }
 
@@ -45,7 +46,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/StartAppInApp-2.4.13.jar')
     provided files('XposedBridgeApi-20150213.jar')
-    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.nononsenseapps:filepicker:2.1'
     compile 'commons-io:commons-io:2.4'
 }
